[tool.poetry]
name = "farmrpg-wiki-archive"
version = "1.0"
description = ""
authors = ["Noah Kantrowitz <noah@coderanger.net>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
